# cathouse

./: .gitignore  Dockerfile  Taskfile.yml  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker_publish.yml
cathouse/api/: server.py
cathouse/api/dependencies/: database.py  settings.py
cathouse/api/routes/: __init__.py  cats.py  frontend.py
cathouse/core/: config.py  tasks.py
cathouse/db/: tasks.py
cathouse/db/migrations/: env.py
cathouse/db/migrations/versions/: 382b84a3c7af_create_cats_table.py
cathouse/db/repositories/: cats.py
cathouse/models/: cat.py
cathouse/static/: catService.js
cathouse/templates/: base.html  index.html
kubernetes/helm/cathouse/: Chart.yaml  values.yaml
kubernetes/helm/cathouse/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
kubernetes/helm/cathouse/templates/tests/: test-connection.yaml
scripts/: asgi.py  bump_version.py
tests/: test_cathouse.py
tests/api/: test_server.py
