[tool.poetry]
name = "cathouse"
version = "0.1.0"
description = "Demo REST API for learning purposes."
authors = ["Andrew Hoetker <andrew@hoetker.engineer>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
pydantic = { version = "^1.8.2", extras = ["dotenv"] }
uvloop = "^0.15.2"
uvicorn = "^0.14.0"
httptools = "^0.2.0"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.3.24"
databases = { version = "^0.4.3", extras = ["postgresql", "sqlite"] }
alembic = "^1.6.5"
python-multipart = "^0.0.5"
psycopg2 = "^2.9.1"
Jinja2 = "^3.0.3"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
devtools = "^0.6.1"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
