[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cathouse"
version = "0.2.2"
description = "Demo REST API for learning purposes."
authors = [ "Andrew Hoetker <andrew@hoetker.engineer>",]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvloop = "^0.15.2"
uvicorn = "^0.14.0"
httptools = "^0.2.0"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.3.24"
alembic = "^1.6.5"
python-multipart = "^0.0.5"
psycopg2 = "^2.9.1"
Jinja2 = "^3.0.3"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
devtools = "^0.6.1"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.2"
typer = "^0.4.0"
toml = "^0.10.2"
semantic-version = "^2.8.5"

[tool.poetry.dependencies.pydantic]
version = "^1.8.2"
extras = [ "dotenv",]

[tool.poetry.dependencies.databases]
version = "^0.4.3"
extras = [ "postgresql", "sqlite",]
